# Chess

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h  widget.ui
resources/: images.qrc
src/: CMakeLists.txt  main.cpp  main.h  widget.cpp  widget.h  widget.ui
src/Forms/: mainWindow.ui
src/board/: board.cpp  board.h
src/board/FEN_processing/: fenProcessing.cpp  fenProcessing.h
src/board/boardRenderer/: boardRenderer.cpp
src/boardRenderer/: boardRenderer.cpp  boardRenderer.h
src/chessBoard/: chessBoard.cpp  chessBoard.h
src/chessBoardSquare/: square.cpp  square.h
src/chessPiece/: chessPiece.cpp  chessPiece.h
src/computer/: computerOpponent.cpp  computerOpponent.h
src/computer/FEN_processing/: fenProcessing.cpp
src/menu/: formEndGame.cpp  formMainMenu.cpp  formMainMenu.h  formMenuChooseColor.cpp  formMenuChooseColor.h  menuController.cpp  menuController.h
src/menu/formChooseFigure/: formChooseFigure.cpp  formChooseFigure.h
src/menu/formEndGame/: formEndGame.cpp  formEndGame.h
src/menu/formMainMenu/: formMainMenu.cpp  formMainMenu.h
src/menu/formMenuChooseColor/: formMenuChooseColor.cpp  formMenuChooseColor.h
src/menu/menuController/: menuController.cpp  menuController.h
src/piece/: piece.cpp  piece.h
src/piece/bishop/: bishop.cpp  bishop.h
src/piece/king/: king.cpp  king.h
src/piece/knight/: knight.cpp  knight.h
src/piece/pawn/: pawn.cpp  pawn.h
src/piece/queen/: queen.cpp  queen.h
src/piece/rook/: rook.cpp  rook.h
src/square/: square.cpp  square.h
